[package]
name = "concurrent-queue"
version = "1.2.2"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Concurrent multi-producer multi-consumer queue"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/concurrent-queue"
homepage = "https://github.com/smol-rs/concurrent-queue"
documentation = "https://docs.rs/concurrent-queue"
keywords = ["channel", "mpmc", "spsc", "spmc", "mpsc"]
categories = ["concurrency"]

[lib]
bench = false

[dependencies]
cache-padded = "1.1.1"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.3.4"
easy-parallel = "3.1.0"
fastrand = "1.3.3"
