[package]
name = "concurrent-queue"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "2.2.0"
authors = [
    "Stjepan Glavina <stjepang@gmail.com>",
    "Taiki Endo <te316e89@gmail.com>",
    "John Nunley <jtnunley01@gmail.com>"
]
edition = "2018"
rust-version = "1.38"
description = "Concurrent multi-producer multi-consumer queue"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/concurrent-queue"
keywords = ["channel", "mpmc", "spsc", "spmc", "mpsc"]
categories = ["concurrency"]
exclude = ["/.*"]

[lib]
bench = false

[dependencies]
crossbeam-utils = { version = "0.8.11", default-features = false }
portable-atomic = { version = "1", default-features = false, optional = true }

# Enables loom testing. This feature is permanently unstable and the API may
# change at any time.
[target.'cfg(loom)'.dependencies]
loom = { version = "0.5", optional = true }

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.4.0"
easy-parallel = "3.1.0"
fastrand = "1.3.3"

[features]
default = ["std"]
std = []
